syntax = "proto3";

option csharp_namespace = "OrderService.Protos";

package order;

service Orders {
  rpc GetOrdersByUser (GetOrdersRequest) returns (OrdersListResponse);
  
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message GetOrdersRequest {
  int32 user_id = 1;
}

message OrderModel {
    int32 id = 1;
    string product_name = 2;
    double price = 3;
    string created_at = 4;
}

message OrdersListResponse {
    repeated OrderModel orders = 1;
}

message CreateOrderRequest {
    int32 user_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    int32 order_id = 1;
}